generated_systems/self_deploy_20260715_190147/counter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /counter
        pathType: Prefix
        backend:
          service:
            name: counter-svc
            port:
              number: 80
